--- a/src/pages/introduction/drug/drug.html
+++ b/src/pages/introduction/drug/drug.html
@@ -18,7 +18,7 @@ Hier kannst Du die Dosierung Deiner Medikamente erfassen
 
   <ion-item>
     <ion-label>täglich</ion-label>
-    <ion-select [(ngModel)]="bekannteAllergien" multiple="true">
+    <ion-select [(ngModel)]="bekannteAllergien" multiple="true" cancelText="Abbrechen">
       <ion-option>morgens</ion-option>
       <ion-option>mittags</ion-option>
       <ion-option>abends</ion-option>
