--- a/src/pages/introduction/drug/drug.html
+++ b/src/pages/introduction/drug/drug.html
@@ -36,6 +36,13 @@ Hier kannst Du die Dosierung Deiner Medikamente erfassen
      </ion-item>
    </ion-list>
 
-   <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
-
-   <button ion-button icon-right secondary (click)="pushReminderTimePage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
+   <ion-grid>
+     <ion-row>
+       <ion-col text-center>
+         <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px"><ion-icon name='close'></ion-icon>Abbrechen</button>
+       </ion-col>
+       <ion-col text-center>
+         <button ion-button icon-right secondary (click)="pushReminderTimePage()" style="height:36px;width:130px">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
+       </ion-col>
+     </ion-row>
+   </ion-grid>
