--- a/src/pages/introduction/drug/drug.html
+++ b/src/pages/introduction/drug/drug.html
@@ -61,6 +61,15 @@ Hier kannst Du die Dosierung Deiner Medikamente erfassen
        </ion-col>
      </ion-row>
    </ion-grid>
+   <h1>&nbsp;</h1>
+     <h1>&nbsp;</h1>
+       <h1>&nbsp;</h1>
+         <h1>&nbsp;</h1>
+           <h1>&nbsp;</h1>
+             <h1>&nbsp;</h1>
+               <h1>&nbsp;</h1>
+                 <h1>&nbsp;</h1>
+                   <h1>&nbsp;</h1>
 
        <ion-select [(ngModel)]="bekannteAllergien" multiple="true" [disabled]="isDisabled">
          <ion-option>morgens</ion-option>
